assets/css/app.scss
/* ... */
section.about{
  display: grid;
  grid-template-columns: 3fr auto;
  justify-content: space-between;
  align-items: center;
  height: 100vh;
  padding-left: $inner-margin;
  padding-right: $inner-margin;
  grid-column-gap: auto;

  section.abouttxt{
    width: 75%;
  }
}

section.team{
  display: flex;
  flex-direction: row-reverse;

  a:hover{
    color: $green;
  }
}
div.popup{
  z-index: -1;
  position: fixed;
  top: 10vh;
  bottom: 10vh;
  width: 100%;
  height: 80vh;
  display: flex;
  justify-content: center;
  align-items: center;
  // background-color: red;
  background-image: $background-image;
  background-size: contain;
  background-position: center;
  background-repeat: no-repeat;
}

section.episode-page{
  display: grid;
  grid-template-rows: 1fr;
  margin-top: 8vw;
  margin-left: $inner-margin;
  margin-right: $inner-margin;


  div.bigdisplay{
    // background-color: $yellow;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    height: 50vh;
    //background-image: url({{ post.header-image }});
    background-position: center;
    background-size: cover;
    background-blend-mode: screen;
    border: solid 4px black;
    padding: $episode-inner;
    margin-bottom: $outer-margin;


    div{
      display: flex;
      flex-direction: column;
      justify-content: space-between;
    }
    div.playButton{
      justify-content: flex-end;

      svg{
        fill: black;
        height: 4vw;
        width: 4vw;
      }
      svg:hover{
        fill: $red;
      }
    }
  }

  div.transcriptToggle{
    display: flex;
    flex-direction: row;
    margin-bottom: $episode-inner;
    line-height: $body-line-height;
    div.summaryButton{
      margin-right: $outer-margin;
    }
    div.selected{
      h4{
        background-color: $yellow;
      }
      text-decoration: underline;
    }
    div:hover{
      color: $red;
      text-decoration: underline;
    }

  }

  section.episode-content{
    display: grid;
    grid-template-columns: 3fr auto;
    justify-content: space-between;
    grid-column-gap: auto;

    section.article{
      margin-bottom: 5vw;

      a{
	background-color: $yellow;
      }
      a.nameTag{
        font-family: stratos;
        font-size: $h4-size;
        background-color: $yellow;
      }

      p{
        font-family: Times;
        width: 80%;
        font-size: $h4-size;
        line-height: $body-line-height;

        img{
        width: 100%;
        line-height: 0;
        }
        em{
          font-family: stratos;
          font-size: $h5-size;
          background-color: $yellow;
        }
        em.source{
          background-color: $red
        }
      }
      blockquote {
        margin-left: 1vw;
        padding-left: 2vw;
        border-left: solid 4px black;
      }
    }


    h3{
      width: 80%;
    }
    div.tags{
      display: flex;
      flex-direction: column;
      height: auto;

      div{
        background-color: white;
        border: solid 4px black;
        padding: $episode-inner;
        margin-bottom: $episode-inner;

        h3{
          line-height: 1;
          margin-bottom: $episode-inner;
        }
        h5{
          line-height: 1.5;
          color: data-color;
        }
      }
    }
  }

  section.transcript{
    display: none;
    margin-top: 3vw;
    margin-bottom: 5vw;
    div{
      width: 80%;
    }
    font-family: Times;
    width: 80%;
    font-size: $h4-size;
    line-height: $body-line-height;
  }
  strong{
    font-weight: bold;
    text-decoration: underline;
  }
}

section.episode-list-container{
  display: flex;
  flex-direction: column;
  margin-bottom: 5vw;

  section.episode{
    display: flex;
    margin-left: $inner-margin;
    margin-right: $inner-margin;
    margin-bottom: $episode-body-top;
    background-color: white;
    border: solid 4px black;

    div{
      padding: $episode-inner;

      h3{
        margin-top: $episode-body-top;
        margin-bottom:$episode-body-bottom;
        margin-left: $episode-body-left;
        width: 60%;
      }

      div.tags{
        display: flex;
        margin-left: $episode-body-left;
        width: auto;

        padding: 0;

        h5{
          margin-right: 32px;
        }
      }
    }
    div.play_butt{
      display: flex;
      flex-direction: column;
      align-items: center;
      justify-content: center;
      margin-right: 4vw;

      a:hover{
        animation: none;
      }
      svg{
        width: 8vw;
        fill: black;
      }
      svg:hover{
        fill: $red;
      }
    }
  }

}

section.episode-organizing-bar{
  margin-top: 10vw;
  display: grid;
  grid-template-rows: 1fr;
  margin-left: $inner-margin;
  margin-right: $inner-margin;
  margin-bottom: $episode-body-top;

  div{
    display: flex;
    justify-content: space-between;
    align-items: center;
    background-color: white;
    border: solid 4px black;
    padding: $episode-inner;

    #search-container{
      position: absolute;
      display: flex;
      flex-direction: column;
      align-self: flex-start;
      align-items: flex-start;

      ul{
        font-size: $h4-size;
        li{
          margin-top: $episode-inner;
        }
      }
    }
    #placeholder{
      padding: 0px;
      margin: 0px;
      border: none;
    }
    input{
      border: none;
      border-bottom: 3px solid black;
      font-family: $type;
      font-size: $h4-size;

    }
    select{
      appearance: none;
      -webkit-appearance:none;
      background-color: white;
      border: none;
      border-bottom: 3px solid black;
      font-family: $type;
      font-size: $h4-size;
    }
  }
}
/* ... */

